Convert schema to be postgres-compatible
That last view creation is probably the most problematic thing.
Copied over work from barnacl.es

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
 default: &default
-  adapter: postgres
+  adapter: postgresql
   host: localhost
-  username: dev_username
-  password: dev_password
+  # username: dev_username
+  # password: dev_password
 
 development:
   <<: *default
